Bug 334549: Fix for Coverty CID 179: assert instead try to handle being called twice.  patch by Jon Smirl <jonsmirl@yahoo.com>, r=bsmedberg, sr=darin